bug fixing the navbar, not showing after a project were clicked, also bugged onclick -> onmouseup instead, seems to work better

--- a/src/components/MainPage.module.scss
+++ b/src/components/MainPage.module.scss
@@ -1,7 +1,6 @@
 .header-tag {
   display: flex;
   z-index: 7;
-  position: fixed;
   top: 0;
   width: 100%;
   transition: var(--transition-navbar);
