--- a/src/components/projects/cards/CardItem.module.scss
+++ b/src/components/projects/cards/CardItem.module.scss
@@ -20,9 +20,6 @@
   .technologies-container {
     li {
       text-shadow: 0 0 0 #fff, 0 0 2px #fff;
-      /*   text-shadow: 0 0 2px #000, 0 0 2px #000;
-      @media (min-width: 50em) {
-      }*/
     }
   }
 
@@ -60,11 +57,7 @@
   font-size: 1.6rem;
   font-family: "Intel One Mono", sans-serif;
   text-shadow: 0 0 0 #fff, 0 0 3px #fff;
-  //text-shadow: 0 0 2px #000, 0 0 2px #000;
   background: none;
-
-  /*@media (min-width: 50em) {
-  }*/
 }
 
 .technologies-container {
